--- a/README
+++ b/README
@@ -8,39 +8,21 @@ To do those two commands togethar, run `make clean-build`.
 To create a tar file, run `make tar` and it will be created at the top level directory.
 
 Usage:
-    ./412fe [flags] <filename>
+    ./schedule [flags] <filename>
 
 Flags (Should be mutually exclusive; priority: -h > -r > -p > -s):
 
-  -h
+    -h
       Displays a help message describing all valid command-line options.
       
       If -h is present, the program ignores all other flags and arguments.
 
-  -s <filename>
-      This is simply Scanner mode. Reads the specified file and prints, to stdout, a list of all tokens found.
-      
-      Each token is shown with its line number, its syntactic category, and its lexeme (spelling).
-
-  -p <filename>
-      Parser mode. Reads the specified file, scans it, parses it, and builds the intermediate representation.
-        • If the parse succeeds, prints:
-            `Parse succeeded. Processed k operations.`
-          where k is the number of operations handled.
-        • If the parse finds errors, prints:
-            `Parse found errors` with error messages written to stderr.
-
-  -r <filename>
-      IR mode. Reads the specified file, scans it, parses it, builds the intermediate representation, and prints the representation in a human-readable format to stdout.
-      
-      If parsing fails, error messages are written to stderr and the IR is not printed.
-
     -x <filename>
         scans and parse the input block. It should then perform renaming the code in the input block and print the results to the standard output stream.
-    -<integer k> <filename>
-        scans and parse the input block. It should then perform renaming the code in the input block and print the results to the standard output stream.
-Default behavior:
-    If no flag is specified, the program behaves as if -p <filename> was provided.
+    
+    <filename>
+        (No flag specified.)
+        Runs the Lab 3 instruction scheduler on the input ILOC code and prints the scheduled output using the required multi-operation format.
 
 Contents of the tar:
     ./main.go                 – entry point, command-line handling
@@ -49,6 +31,10 @@ Contents of the tar:
     ./parser/parser.go        – parser implementation
     ./parser/parser_helper.go – helper functions for parser
     ./models/models.go        – data structures for tokens, operations
+    scheduler/                  – Lab 3 list scheduler implementation
+        DependenceGraph.go
+        scheduler.go
+        priority.go
     ./constants/constants.go  – syntactic categories and constants
     ./makefile                – build rules (clean, build, clean-build, tar)
     ./README                  – this file
